syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service ExampleOrder {

  //创建订单
  rpc CreateOrder(ExampleOrderRequest) returns (ExampleOrderInfoResponse);

  // 订单列表
  rpc OrderList(ExampleOrderFilterRequest) returns (ExampleOrderListResponse);

  // 订单详情
  rpc OrderDetail(ExampleOrderRequest) returns (ExampleOrderInfoDetailResponse);

  // 修改订单状态
  rpc UpdateOrderStatus(ExampleOrderStatus) returns (google.protobuf.Empty);
}

message ExampleOrderStatus {
  int32 id = 1;
  string orderSn = 2;
  string status = 3;
}

message ExampleOrderRequest {
  int32 id = 1;
  int32 userId = 2;
  string address = 3;
  string name = 4;
  string mobile = 5;
  string post = 6;
}

message ExampleOrderInfoResponse {
  int32 id = 1;
  int32 userId = 2;
  string orderSn = 3;
  string payType = 4;
  string status = 5;
  string post = 6;
  float total = 7;
  string address = 8;
  string name = 9;
  string mobile = 10;
  string addTime = 11;
}

message ExampleOrderItemResponse {
  int32 id = 1;
  int32 orderId = 2;
  int32 goodsId = 3;
  string goodsName = 4;
  string goodsImage = 5;
  float goodsPrice = 6;
  int32 nums = 7;
}

message ExampleOrderInfoDetailResponse {
  ExampleOrderInfoResponse orderInfo = 1;
  repeated ExampleOrderItemResponse goods = 2;
}

message ExampleOrderFilterRequest {
  int32 userId = 1;
  int32 pages = 2;
  int32 pagePerNums = 3;
}

message ExampleOrderListResponse {
  int32 total = 1;
  repeated ExampleOrderInfoResponse data = 2;
}
